--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</div>
 		<div class="execute">Execute</div>	
 		<div class="output"></div>
+		<div class="author">By Neirs</div>
 	</section>
 	<footer class="creator-copyright">
 	</footer>
