--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<link rel="icon" href="img/sa-logo.png">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<title>Game 24</title>
 </head>
 <body>
