--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 	<section class="output-container">
 		<div class=input-container>
 			<div>
-				<input type="text" class="end-slowly-2" name="input-0" placeholder="..">
+				<input type="text" class="end-slowly-2" name="input-0" placeholder="">
 				<div class="input-underline end-slowly-2"></div>
 			</div>
 			<div>
-				<input type="text" class="end-slowly-2" name="input-1" placeholder="..">
+				<input type="text" class="end-slowly-2" name="input-1" placeholder="">
 				<div class="input-underline end-slowly-2"></div>
 			</div>
 			<div>
-				<input type="text" class="end-slowly-2" name="input-2" placeholder="..">
+				<input type="text" class="end-slowly-2" name="input-2" placeholder="">
 				<div class="input-underline end-slowly-2"></div>
 			</div>
 			<div>
-				<input type="text" class="end-slowly-2" name="input-3" placeholder="..">
+				<input type="text" class="end-slowly-2" name="input-3" placeholder="">
 				<div class="input-underline end-slowly-2"></div>
 			</div>
 		</div>
